# esg-score-eda

./: .gitignore  CLAUDE.md  README.md  activate_env.sh  git_cleanup_commands.sh  location.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh
data/: MODEL_DATA_README.md  README.md
data/ml_output/: MODEL_DATA_README.md
data/ml_output/raw/: score_zscore.csv
data/ml_output/raw/metadata/: feature_groups.json  linear_model_columns.json  tree_model_columns.json  yeo_johnson_mapping.json
data/raw/: df_cleaned.csv  sample_data.py
docs/: PHASE1_SUMMARY.md
scripts/: README.md  analyze_missing_values.py  apply_yeo_johnson.py  create_ml_model_data.py  create_model_specific_data.py  detect_isolation_forest_outliers.py  detect_outliers.py  engineer_features.py  feature_engineering.py  generate_isolation_forest_plots.py  generate_metadata.py  generate_ml_output.py  generate_outlier_comparison_plots.py  generate_score.py  generate_shap_plots.py  impute_outliers.py  shap_compatibility.py  update_yeo_johnson_visualizations.py
src/: __init__.py
src/analysis/: __init__.py  feature_engineering.py  missing_values.py  outlier_detection.py
src/esg_eda/: __init__.py  py.typed
src/esg_eda/analysis/: __init__.py  feature_engineering.py  missing_values.py  outlier_detection.py
src/esg_eda/core/: __init__.py  base.py  config.py  exceptions.py
src/esg_eda/pipeline/: __init__.py  orchestrator.py
src/esg_eda/utils/: __init__.py  logging.py
src/esg_eda/visualization/: __init__.py
tests/: __init__.py  conftest.py
